force-app/main/default/objects/Company_Sync__mdt/Company_Sync__mdt.object-meta.xml
<CustomObject>
    <label>Company Sync</label>
    <pluralLabel>Company Syncs</pluralLabel>
</CustomObject>