force-app/main/default/objects/Company_Sync__mdt/fields/isBillingAddressChanged__c.field-meta.xml
<CustomField>
    <fullName>isBillingAddressChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBillingAddressChanged</label>
    <type>Checkbox</type>
</CustomField>