force-app/main/default/objects/Company_Sync__mdt/fields/isCriticalField__c.field-meta.xml
<CustomField>
    <fullName>isCriticalField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCriticalField</label>
    <type>Checkbox</type>
</CustomField>