force-app/main/default/objects/Company_Sync__mdt/fields/isShippingAddressChanged__c.field-meta.xml
<CustomField>
    <fullName>isShippingAddressChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isShippingAddressChanged</label>
    <type>Checkbox</type>
</CustomField>